cargo-features = ["per-package-target"]

[package]
edition = "2024"
name = "fsmd"
version = "0.1.0"

[dependencies]
gpt_disk_io = "0.16.0"
log = "0.4.25"
rstd = {path = "../../rstd"}
spin = "0.9.8"

[dependencies.fatfs]
default-features = false
features = ["lfn", "alloc", "unicode"]
path = "crates/good-fatfs"
